# libmygpo-qt

./: AUTHORS  CMakeLists.txt  Doxyfile.in  Mygpo-qtConfig.cmake.in  README  README.md  doxygen.config  libmygpo-qt.kdev4  libmygpo-qt.pc.in
.github/workflows/: ccpp.yml
cmake/modules/: CMakeLists.txt  FindLibmygpo-qt.cmake  Findlibmygpo-qt.cmake
example/: Makefile
example/src/: Example.cpp  Example.h  main.cpp
extra/: CMakeLists.txt
extra/qjson/: CMakeLists.txt
extra/qjson/src/: CMakeLists.txt
src/: AddRemoveResult.cpp  AddRemoveResult.h  AddRemoveResult_p.h  ApiRequest.cpp  ApiRequest.h  ApiRequest_p.h  CMakeLists.txt  Config.cpp  Config.h  Config_p.h  Device.cpp  Device.h  DeviceList.cpp  DeviceList.h  DeviceList_p.h  DeviceSyncResult.cpp  DeviceSyncResult.h  DeviceSyncResult_p.h  DeviceUpdates.cpp  DeviceUpdates.h  DeviceUpdates_p.h  Device_p.h  Episode.cpp  Episode.h  EpisodeAction.cpp  EpisodeAction.h  EpisodeActionList.cpp  EpisodeActionList.h  EpisodeActionList_p.h  EpisodeAction_p.h  EpisodeList.cpp  EpisodeList.h  EpisodeList_p.h  Episode_p.h  JsonCreator.cpp  JsonCreator.h  JsonParser.cpp  JsonParser.h  Podcast.cpp  Podcast.h  (+21 more)
src/example/: Makefile
src/example/src/: Example.cpp  Example.h  main.cpp
src/qjsonwrapper/: Json.cpp
templates/: Template.cpp  Template.h
tests/: ApiRequestTest.cpp  ApiRequestTest.h  CMakeLists.txt  JsonCreatorTest.cpp  JsonCreatorTest.h  Makefile.man  RequestHandlerTest.cpp  RequestHandlerTest.h  UrlBuilderTest.cpp  UrlBuilderTest.h
